--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: dash 0.4.18\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2008-03-02 21:54+0000\n"
-"PO-Revision-Date: 2007-11-12 20:52+0100\n"
-"Last-Translator: Tim Dijkstra <tim@famdijkstra.org>\n"
+"PO-Revision-Date: 2008-07-21 10:50+0200\n"
+"Last-Translator: Thijs Kinkhorst <thijs@debian.org>\n"
 "Language-Team: Debian Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-15\n"
@@ -34,23 +34,16 @@ msgstr "dash als /bin/sh installeren?"
 #: ../dash.templates.in:1001
 msgid "The default /bin/sh shell on Debian and Debian-based systems is bash."
 msgstr ""
-"De standaard /bin/sh shell op Debian en Debian-gebaseerde systemen is bash."
+"De standaard /bin/sh shell voor Debian en voor op Debian-gebaseerde systemen is bash."
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
-#, fuzzy
-#| msgid ""
-#| "However, since the distribution policy requires all shell scripts using /"
-#| "bin/sh to be POSIX compliant, any shell that conforms to POSIX, such as "
-#| "dash, can serve as /bin/sh. You may wish to do this because dash is "
-#| "faster and smaller than bash."
 msgid ""
 "However, since the default shell is required to be POSIX-compliant, any "
 "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
 "wish to do this because dash is faster and smaller than bash."
 msgstr ""
-"Debian-beleid eist echter dat alle shell-scripts die /bin/sh gebruiken "
-"moeten voldoen aan de POSIX-standaard. Elke shell die zich conformeert aan "
-"POSIX, zoals dash, kan dienst doen als /bin/sh. Een reden om dit te "
-"overwegen is dat dash sneller en kleiner is dan bash."
+"Echter, Debian-beleid eist dat elke shell die zich conformeert aan "
+"POSIX, zoals dash, kan worden gebruikt voor /bin/sh. Een reden om dit te "
+"overwegen is dat dash sneller en compacter is dan bash."
