* new upstream release.     * builds again with DEB_BUILD_OPTIONS=diet (closes: #493301).   * debian/diff/*.diff: remove; obsolete.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dash (0.5.5.1-1) unstable; urgency=low
+
+  * new upstream release.
+    * builds again with DEB_BUILD_OPTIONS=diet (closes: #493301).
+  * debian/diff/*.diff: remove; obsolete.
+
+ -- Gerrit Pape <pape@smarden.org>  Tue, 10 Feb 2009 22:28:01 +0000
+
 dash (0.5.4-12) unstable; urgency=low
 
   * debian/po/nl.po: [INTL:nl] Updated debconf templates translation
