--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,11 @@ dash (0.5.5.1-1) unstable; urgency=low
   * debian/diff/*.diff: remove; obsolete.
   * debian/po/es.po: [INTL:es] Spanish debconf template translation
     for dash (thx Francisco Javier Cuadrado, closes: #513689).
+  * debian/diff/0001--SHELL-execute-EXIT-trap-if-the-shell-...diff:
+    new; [SHELL] execute EXIT trap if the shell is killed through a
+    signal (thx Chris Lamb for the patch, closes: #390433).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 11 Feb 2009 01:07:29 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 11 Feb 2009 01:51:24 +0000
 
 dash (0.5.4-12) unstable; urgency=low
 
