--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,11 @@ dash (0.5.5.1-1) unstable; urgency=low
   * debian/diff/0002--MAN-rename-sh-to-dash-update-DESCRIPTION...diff:
     new; [MAN] rename sh to dash, update DESCRIPTION and HISTORY (thx
     jaalto, closes: #499838).
+  * debian/diff/0003--SHELL-print-n-upon-EOF-CTRL-D-when-run-...diff:
+    new; [SHELL] print \n upon EOF (CTRL-D) when run interactively
+    (closes: #476422).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 11 Feb 2009 01:53:12 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 11 Feb 2009 01:55:05 +0000
 
 dash (0.5.4-12) unstable; urgency=low
 
