--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+dash (0.5.5.1-2) unstable; urgency=low
+
+  * debian/diff/0001--SHELL-execute-EXIT-trap-if-the-shell-...diff;
+    remove; patch is faulty (reopens: #390433, closes: #515229,
+    #515064).
+
+ -- Gerrit Pape <pape@smarden.org>  Mon, 16 Feb 2009 12:49:32 +0000
+
 dash (0.5.5.1-1) unstable; urgency=low
 
   * new upstream release.
