dash (0.5.5.1-2.2) unstable; urgency=low
  [ Luk Claes ]
  * Non-maintainer upload with maintainer's permission.
  * Change the default for the system shell to dash.
  * Ship /bin/sh in the package and fix the diversion handling
    for it to make sure /bin/sh is always present.
  * Set debconf priority to high when upgrading from an existing
    system.
  * Add versioned dpkg dependency for dpkg-divert --listpackage.
  * Add NEWS file about changing /bin/sh.
  * Adjusted the debconf template accordingly.
  * Make dash Priority: Required

  [ Raphael Geissert ]
  * Make dash Essential: yes

 -- Luk Claes <luk@debian.org>  Wed, 22 Jul 2009 20:17:31 +0200

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,26 @@
+dash (0.5.5.1-2.2) unstable; urgency=low
+
+  [ Luk Claes ]
+  * Non-maintainer upload with maintainer's permission.
+  * Change the default for the system shell to dash.
+  * Ship /bin/sh in the package and fix the diversion handling
+    for it to make sure /bin/sh is always present.
+  * Set debconf priority to high when upgrading from an existing
+    system.
+  * Add versioned dpkg dependency for dpkg-divert --listpackage.
+  * Add NEWS file about changing /bin/sh.
+  * Adjusted the debconf template accordingly.
+  * Make dash Priority: Required
+
+  [ Raphael Geissert ]
+  * Make dash Essential: yes
+
+ -- Luk Claes <luk@debian.org>  Wed, 22 Jul 2009 20:17:31 +0200
+
 dash (0.5.5.1-2.1) unstable; urgency=high
 
   * Non-maintainer upload.
-  * Depend on debian-utils (Closes: #537990).
+  * Depend on debianutils (Closes: #537990).
 
  -- Luk Claes <luk@debian.org>  Wed, 22 Jul 2009 18:50:45 +0000
 
