--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+dash (0.5.5.1-2.3) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * Update the debconf templates according to the feedback on 
+    debian-l10n-english.
+  * Install the NEWS file in the right location (Closes: #538809).
+
+ -- Luk Claes <luk@debian.org>  Mon, 27 Jul 2009 12:45:48 +0000
+
 dash (0.5.5.1-2.2) unstable; urgency=low
 
   [ Luk Claes ]
