--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dash (0.5.5.1-3) unstable; urgency=low
+
+  * Thanks Luk Claes for NUMs (closes: #538682).
+
+ -- Gerrit Pape <pape@smarden.org>  Wed, 16 Sep 2009 13:38:34 +0000
+
 dash (0.5.5.1-2.3) unstable; urgency=low
 
   * Non-maintainer upload.
