--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,10 @@ dash (0.5.5.1-3) unstable; urgency=low
   * debian/dash.NEWS.Debian: when upgrading existing installations,
     the system shell will not be changed automatically (closes:
     #539363).
+  * debian/control: update long description (thx Justin B Rye; closes:
+    #546458).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 16 Sep 2009 13:55:11 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 16 Sep 2009 14:08:37 +0000
 
 dash (0.5.5.1-2.3) unstable; urgency=low
 
