--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -1,40 +1,36 @@
-# translation of dash_0.5.4-11_sv.po to Swedish
-# Translators, if you are not familiar with the PO format, gettext
-# documentation is worth reading, especially sections dedicated to
-# this format, e.g. by running:
-# info -n '(gettext)PO Files'
-# info -n '(gettext)Header Entry'
-# Some information specific to po-debconf are available at
-# /usr/share/doc/po-debconf/README-trans
-# or http://www.debian.org/intl/l10n/po-debconf/README-trans
-# Developers do not need to manually edit POT or PO files.
+# Translation of Dash debconf template to Swedish
+# Copyright (C) 2009 Martin Bagge <brother@bsnet.se>
+# This file is distributed under the same license as the Dash package.
 #
-# Martin ≈gren <martin.agren@gmail.com>, 2008.
+# Martin Bagge <brother@bsnet.se>, 2009
+# Martin √Ögren <martin.agren@gmail.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: dash_0.5.4-11_sv\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-07-20 10:45+0200\n"
-"Last-Translator: Martin ≈gren <martin.agren@gmail.com>\n"
+"PO-Revision-Date: 2009-07-28 22:49+0100\n"
+"Last-Translator: Martin Bagge <brother@bsnet.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Language: Swedish\n"
+"X-Poedit-Country: Sweden\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Ska dash anv√§ndas som standardskal (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "Systemskalet √§r kommandotolken f√∂r skript skrivna f√∂r skalet."
 
 #. Type: boolean
 #. Description
@@ -43,6 +39,9 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
+"Att anv√§nda dash som systemskal kommer att inverka positivt p√• "
+"drifthastigheten av hela systemet. Det kommer inte inneb√§ra att anv√§ndarnas "
+"skal byts ut."
 
 #~ msgid "Install dash as /bin/sh?"
 #~ msgstr "Installera dash som /bin/sh?"
@@ -50,7 +49,7 @@ msgstr ""
 #~ msgid ""
 #~ "The default /bin/sh shell on Debian and Debian-based systems is bash."
 #~ msgstr ""
-#~ "Standardvalet fˆr skalet /bin/sh pÂ Debian och Debianbaserade system ‰r "
+#~ "Standardvalet f√∂r skalet /bin/sh p√• Debian och Debianbaserade system √§r "
 #~ "bash."
 
 #~ msgid ""
@@ -58,6 +57,6 @@ msgstr ""
 #~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
 #~ "wish to do this because dash is faster and smaller than bash."
 #~ msgstr ""
-#~ "Eftersom standardskalet mÂste vara POSIX-kompatibelt, kan dock vilket "
-#~ "POSIX-kompatibelt skal som helst, sÂsom dash, tj‰nstgˆra som /bin/sh. Du "
-#~ "kanske ˆnskar detta eftersom dash ‰r snabbare och mindre ‰n bash."
+#~ "Eftersom standardskalet m√•ste vara POSIX-kompatibelt, kan dock vilket "
+#~ "POSIX-kompatibelt skal som helst, s√•som dash, tj√§nstg√∂ra som /bin/sh. Du "
+#~ "kanske √∂nskar detta eftersom dash √§r snabbare och mindre √§n bash."
