--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,10 @@ dash (0.5.5.1-3) unstable; urgency=low
     #546458).
   * debian/po/sv.po: [INTL:sv] Swedish strings for dash debconf (thx
     Martin Bagge; closes: #539070).
+  * debian/po/ru.po: [INTL:ru] Russian debconf templates translation
+    update (thx Yuri Kozlov; closes: #539189).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 16 Sep 2009 14:14:46 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 16 Sep 2009 14:16:10 +0000
 
 dash (0.5.5.1-2.3) unstable; urgency=low
 
