--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -12,32 +12,34 @@
 #
 # Ilgiz Kalmetev <translator@ilgiz.pp.ru>, 2003.
 # Yuri Kozlov <kozlov.y@gmail.com>, 2007, 2008.
+# Yuri Kozlov <yuray@komyakino.ru>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: dash 0.5.4-9\n"
+"Project-Id-Version: dash 0.5.5.1-2.3\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-05-05 20:44+0400\n"
-"Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
+"PO-Revision-Date: 2009-07-29 21:06+0400\n"
+"Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Использовать dash в качестве системной оболочки по умолчанию (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
 msgstr ""
+"Системная оболочка -- это командный интерпретатор для "
+"сценариев оболочки командной строки."
 
 #. Type: boolean
 #. Description
@@ -46,23 +48,7 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
+"Использование dash в качестве системной оболочки улучшит общую "
+"производительность системы. Это не изменит оболочки командной строки, "
+"используемые пользователями."
 
-#~ msgid "Install dash as /bin/sh?"
-#~ msgstr "Установить dash как /bin/sh?"
-
-#~ msgid ""
-#~ "The default /bin/sh shell on Debian and Debian-based systems is bash."
-#~ msgstr ""
-#~ "Оболочкой командной строки /bin/sh в Debian и основанных на Debian "
-#~ "системах по умолчанию является bash."
-
-#~ msgid ""
-#~ "However, since the default shell is required to be POSIX-compliant, any "
-#~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
-#~ "wish to do this because dash is faster and smaller than bash."
-#~ msgstr ""
-#~ "Однако, так как от оболочки командной строки по умолчанию требуется "
-#~ "только соответствовать POSIX, то любая оболочка, соответствующая POSIX, "
-#~ "типа dash, может работать в качестве /bin/sh. Причинами, по которым вам "
-#~ "стоит рассмотреть переход на dash, являются большая скорость и меньший "
-#~ "размер по сравнению с bash."
