--- a/debian/changelog
+++ b/debian/changelog
@@ -13,8 +13,10 @@ dash (0.5.5.1-3) unstable; urgency=low
     Martin Bagge; closes: #539070).
   * debian/po/ru.po: [INTL:ru] Russian debconf templates translation
     update (thx Yuri Kozlov; closes: #539189).
+  * debian/po/fr.po: fr.po: French program translation (thx julien
+    patriarca; closes: #539630).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 16 Sep 2009 14:16:10 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 16 Sep 2009 14:18:17 +0000
 
 dash (0.5.5.1-2.3) unstable; urgency=low
 
