--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -1,34 +1,35 @@
 # Translation of dash debconf templates to French
-# Copyright (C) 2008 Christian Perrier <bubulle@debian.org>
+# Copyright (C) 2009 Debian French l10n team <debian-l10n-french@lists.debian.org>
 # This file is distributed under the same license as the dash package.
 #
-# Denis Barbier <barbier@debian.org>, 2003-2006.
-# Cyril Brulebois <cyril.brulebois@enst-bretagne.fr>, 2007.
-# Christian Perrier <bubulle@debian.org>, 2008.
+# Translator:
+# Julien Patriarca <patriarcaj@gmail.com>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: dash 0.5.5.1-2.3\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-03-04 09:01+0100\n"
-"Last-Translator: Christian Perrier <bubulle@debian.org>\n"
+"PO-Revision-Date: 2009-08-02 13:30+0100\n"
+"Last-Translator: Julien Patriarca <patriarcaj@gmail.com>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
 msgstr ""
+"Utiliser Dash comme interpréteur de ligne de commande par défaut (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
 msgstr ""
+"Le shell système est l'intérpréteur de commandes utilisé par le système."
 
 #. Type: boolean
 #. Description
@@ -37,23 +38,6 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
-
-#~ msgid "Install dash as /bin/sh?"
-#~ msgstr "Faut-il mettre en place un lien de /bin/sh vers dash ?"
-
-#~ msgid ""
-#~ "The default /bin/sh shell on Debian and Debian-based systems is bash."
-#~ msgstr ""
-#~ "Par défaut, sur un système Debian ou un système basé sur Debian , /bin/sh "
-#~ "est un lien vers bash."
-
-#~ msgid ""
-#~ "However, since the default shell is required to be POSIX-compliant, any "
-#~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
-#~ "wish to do this because dash is faster and smaller than bash."
-#~ msgstr ""
-#~ "Cependant, comme l'interpréteur de commandes (« shell ») par défaut du "
-#~ "système doit être conforme à la norme POSIX, /bin/sh peut être n'importe "
-#~ "quel interpréteur de commandes conforme à cette norme, notamment dash. Il "
-#~ "peut être préférable de choisir cette option car dash est plus rapide et "
-#~ "plus petit que bash."
+"Utiliser Dash comme interpréteur de ligne de commande du système améliorera "
+"les performances globales. Cela ne change pas l'intérpréteur utilisé "
+"interactivement par les utilisateurs."
