--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -1,14 +1,14 @@
 # dash -- Italian debconf messages
 # This file is distributed under the same license as the dash package.
 # Andrea Bolognani <eof@kiyuko.org>, 2006.
-# Luca Monducci <luca.mo@tiscali.it>, 2007 - 2008.
+# Luca Monducci <luca.mo@tiscali.it>, 2007 - 2009.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dash 0.5.4 italian debconf templates\n"
+"Project-Id-Version: dash 0.5.5.1 italian debconf templates\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-06-16 20:21+0200\n"
+"PO-Revision-Date: 2009-08-09 10:51+0200\n"
 "Last-Translator: Luca Monducci <luca.mo@tiscali.it>\n"
 "Language-Team: Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -19,13 +19,15 @@ msgstr ""
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Usare dash come shell di sistema (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
 msgstr ""
+"La shell di sistema è l'interprete dei comandi predefinito negli script "
+"della shell."
 
 #. Type: boolean
 #. Description
@@ -34,21 +36,5 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
-
-#~ msgid "Install dash as /bin/sh?"
-#~ msgstr "Installare dash come /bin/sh?"
-
-#~ msgid ""
-#~ "The default /bin/sh shell on Debian and Debian-based systems is bash."
-#~ msgstr ""
-#~ "La shell predefinita per /bin/sh su sistemi Debian o basati su Debian è "
-#~ "bash."
-
-#~ msgid ""
-#~ "However, since the default shell is required to be POSIX-compliant, any "
-#~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
-#~ "wish to do this because dash is faster and smaller than bash."
-#~ msgstr ""
-#~ "Tuttavia, poiché è richiesto che la shell predefinita sia conforme con "
-#~ "POSIX, qualunque shell conforme a POSIX, come dash, può essere usata "
-#~ "come /bin/sh. Si può preferire dash perché è più piccola e veloce di bash."
+"Usando dash come shell di sistema miglioreranno le prestazioni generali del "
+"sistema. Non verrà cambiata la shell presentata agli utenti interattivi."
