* debian/po/es.po: [INTL:es] Spanish debconf template translation for     dash (closes: #540707).

--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -29,10 +29,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dash 0.5.4-12\n"
+"Project-Id-Version: dash 0.5.5.1-2.3\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2009-01-21 19:20+0100\n"
+"PO-Revision-Date: 2009-08-02 17:21+0100\n"
 "Last-Translator: Francisco Javier Cuadrado <fcocuadrado@gmail.com>\n"
 "Language-Team: Debian l10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -43,31 +43,27 @@ msgstr ""
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "¿Desea utilizar dash como el intérprete de órdenes predeterminado del sistema (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "El intérprete de órdenes del sistema es el que se utiliza de forma predeterminada para todos los programas y scripts."
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
-msgid ""
-"Using dash as the system shell will improve the system's overall "
-"performance. It does not alter the shell presented to interactive users."
-msgstr ""
+msgid "Using dash as the system shell will improve the system's overall performance. It does not alter the shell presented to interactive users."
+msgstr "El uso de dash como el intérprete de órdenes del sistema mejorará el rendimiento general de éste. Esto no altera el intérprete de órdenes que utilizan los usuarios interactivos."
 
 #~ msgid "Install dash as /bin/sh?"
 #~ msgstr "¿Desea instalar dash como «/bin/sh»?"
-
 #~ msgid ""
 #~ "The default /bin/sh shell on Debian and Debian-based systems is bash."
 #~ msgstr ""
 #~ "Bash es el intérprete de órdenes «/bin/sh» predeterminado de los sistemas "
 #~ "Debian y basados en Debian."
-
 #~ msgid ""
 #~ "However, since the default shell is required to be POSIX-compliant, any "
 #~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
@@ -77,3 +73,4 @@ msgstr ""
 #~ "normas POSIX, cualquier intérprete compatible con POSIX, como dash, puede "
 #~ "servir como «/bin/sh». Puede que lo prefiera porque dash es más rápido y "
 #~ "más pequeño que bash."
+
