--- a/debian/changelog
+++ b/debian/changelog
@@ -19,8 +19,10 @@ dash (0.5.5.1-3) unstable; urgency=low
     Helge Kreutzmann; closes: #540221).
   * debian/po/it.po: [INTL:it] Italian translation (thx Luca Monducci;
     closes: #540631).
+  * debian/po/es.po: [INTL:es] Spanish debconf template translation for
+    dash (closes: #540707).
 
- -- Gerrit Pape <pape@smarden.org>  Wed, 16 Sep 2009 14:21:15 +0000
+ -- Gerrit Pape <pape@smarden.org>  Wed, 16 Sep 2009 14:22:37 +0000
 
 dash (0.5.5.1-2.3) unstable; urgency=low
 
