--- a/debian/changelog
+++ b/debian/changelog
@@ -21,8 +21,10 @@ dash (0.5.5.1-4) unstable; urgency=low
     #514863).
   * debian/diff/0027-EVAL-don-t-clear-eflag-when-forking-subshell.diff:
     new; don't clear eflag when forking subshell (closes: #514863).
+  * debian/po/ja.po: [INTL:ja] Update po-debconf template translation
+    (thx Hideki Yamane; closes: #564483).
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 22 Mar 2010 21:45:46 +0000
+ -- Gerrit Pape <pape@smarden.org>  Mon, 22 Mar 2010 22:27:30 +0000
 
 dash (0.5.5.1-3) unstable; urgency=low
 
