--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -13,12 +13,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dash\n"
+"Project-Id-Version: dash 0.5.5.1-3\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-05-29 14:18+0900\n"
-"Last-Translator: Kenshi Muto <kmuto@deian.org>\n"
-"Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
+"PO-Revision-Date: 2010-01-09 11:21+0200\n"
+"Last-Translator: Hideki Yamane (Debian-JP) <henrich@debian.or.jp>\n"
+"Language-Team: Japanese <debian-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -27,13 +27,13 @@ msgstr ""
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "dash をデフォルトのシステムシェル (/bin/sh) として使いますか?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "システムシェルはシェルスクリプト用のデフォルトのコマンドインタプリタです。"
 
 #. Type: boolean
 #. Description
@@ -42,23 +42,6 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
+"dash をシステムシェルとして使うことは、システム全体のパフォーマンスを改善します。"
+"対話的に利用しているユーザのシェルについては、変更しません。"
 
-#~ msgid "Install dash as /bin/sh?"
-#~ msgstr "dash を /bin/sh としてインストールしますか?"
-
-#~ msgid ""
-#~ "The default /bin/sh shell on Debian and Debian-based systems is bash."
-#~ msgstr ""
-#~ "Debian および Debian ベースのシステムのデフォルトの /bin/sh シェルは bash "
-#~ "です。"
-
-#~ msgid ""
-#~ "However, since the default shell is required to be POSIX-compliant, any "
-#~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
-#~ "wish to do this because dash is faster and smaller than bash."
-#~ msgstr ""
-#~ "Debian システムでは bash がデフォルトの /bin/sh です。しかし、Debian のポ"
-#~ "リシーによって、/bin/sh を用いる全てのシェルスクリプトは POSIX 準拠でなけ"
-#~ "ればならないため、POSIX を満たすシェルはどれでも /bin/sh となることができ"
-#~ "ます。dash は POSIX 準拠ですので、/bin/sh として使うことができます。dash "
-#~ "は bash より速くて小さいので、そうしたいと思うかもしれません。"
