--- a/debian/changelog
+++ b/debian/changelog
@@ -23,8 +23,10 @@ dash (0.5.5.1-4) unstable; urgency=low
     new; don't clear eflag when forking subshell (closes: #514863).
   * debian/po/ja.po: [INTL:ja] Update po-debconf template translation
     (thx Hideki Yamane; closes: #564483).
+  * debian/po/bg.po: [I18N:bg] Updated Bulgarian debconf translation
+    (thx Damyan Ivanov; closes: #562836).
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 22 Mar 2010 22:27:30 +0000
+ -- Gerrit Pape <pape@smarden.org>  Mon, 22 Mar 2010 22:31:29 +0000
 
 dash (0.5.5.1-3) unstable; urgency=low
 
