--- a/debian/po/bg.po
+++ b/debian/po/bg.po
@@ -2,13 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Damyan Ivanov <dmn@debian.org>, 2008.
+# Damyan Ivanov <dmn@debian.org>, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-06-18 11:28+0300\n"
+"PO-Revision-Date: 2009-12-28 15:02+0200\n"
 "Last-Translator: Damyan Ivanov <dmn@debian.org>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "MIME-Version: 1.0\n"
@@ -20,13 +20,13 @@ msgstr ""
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Използване на dash като системна обвивка (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "Системната обвивка се използва по подразбиране от скриптовете на обвивката."
 
 #. Type: boolean
 #. Description
@@ -35,6 +35,9 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
+"Използването на dash като системна обвивка ще подобри бързодействието "
+"на системата като цяло. Тази настройка не променя обвивката на интерактивните "
+"потребители."
 
 #~ msgid "Install dash as /bin/sh?"
 #~ msgstr "Инсталиране на dash като /bin/sh?"
@@ -52,3 +55,4 @@ msgstr ""
 #~ "съвместима с POSIX, всяко обвивка, която отговаря на това условие, като "
 #~ "например dash, може да изпълнява тази роля. Възможна причина да "
 #~ "предпочетете dash пред bash е, че е по-малка и по-бърза."
+
