--- a/debian/changelog
+++ b/debian/changelog
@@ -25,8 +25,9 @@ dash (0.5.5.1-4) unstable; urgency=low
     (thx Hideki Yamane; closes: #564483).
   * debian/po/bg.po: [I18N:bg] Updated Bulgarian debconf translation
     (thx Damyan Ivanov; closes: #562836).
+  * debian/dash.preinst: remove superfluous code (closes: #557755).
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 22 Mar 2010 22:31:29 +0000
+ -- Gerrit Pape <pape@smarden.org>  Mon, 22 Mar 2010 22:35:30 +0000
 
 dash (0.5.5.1-3) unstable; urgency=low
 
