--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,10 @@ dash (0.5.5.1-4) unstable; urgency=low
     (thx Damyan Ivanov; closes: #562836).
   * debian/dash.preinst: remove superfluous code (closes: #557755).
   * debian/control: Standards-Version: 3.8.4.0.
+  * debian/po/vi.po: [INTL:vi] Vietnamese debconf templates translation
+    update (thx Clytie Siddall; closes: #577156).
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 22 Mar 2010 22:39:33 +0000
+ -- Gerrit Pape <pape@smarden.org>  Mon, 10 May 2010 23:02:35 +0000
 
 dash (0.5.5.1-3) unstable; urgency=low
 
