--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -1,65 +1,37 @@
-# Vietnamese translation for dash.
-# Copyright © 2008 Free Software Foundation, Inc.
-# Clytie Siddall <clytie@riverland.net.au>, 2005-2008.
+# Vietnamese translation for Dash.
+# Copyright © 2010 Free Software Foundation, Inc.
+# Clytie Siddall <clytie@riverland.net.au>, 2005-2010.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dash 0.5.4-9.1\n"
+"Project-Id-Version: dash 0.5.5.1-3.1\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2007-11-30 19:19+1030\n"
+"PO-Revision-Date: 2010-04-10 16:54+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: LocFactoryEditor 1.7b1\n"
+"X-Generator: LocFactoryEditor 1.8\n"
 
+#: ../dash.templates.in:1001
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Dùng dash làm trình bao hệ thống mặc định (/bin/sh) ?"
 
+#: ../dash.templates.in:1001
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "Trình bao hệ thống là bộ thông thích lệnh mặc định cho văn lệnh trình bao."
 
+#: ../dash.templates.in:1001
 #. Type: boolean
 #. Description
-#: ../dash.templates.in:1001
 msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
-msgstr ""
-
-#~ msgid "Install dash as /bin/sh?"
-#~ msgstr "Cài đặt dash làm « /bin/sh » không?"
-
-#~ msgid ""
-#~ "The default /bin/sh shell on Debian and Debian-based systems is bash."
-#~ msgstr ""
-#~ "Trên hệ thống Debian và dựa trên Debian, trình bao « /bin/sh » mặc định là "
-#~ "bash."
-
-# Bash is the default /bin/sh on a Debian system.  However, since the
-# Debian policy requires all shell scripts using /bin/sh to be POSIX
-# compliant, any shell that conforms to POSIX can serve as /bin/sh.  Since
-# dash is POSIX compliant, it can be used as /bin/sh.  You may wish to do
-# this because dash is faster and smaller than bash.
-#~| msgid ""
-#~| "However, since the distribution policy requires all shell scripts using /"
-#~| "bin/sh to be POSIX compliant, any shell that conforms to POSIX, such as "
-#~| "dash, can serve as /bin/sh. You may wish to do this because dash is "
-#~| "faster and smaller than bash."
-#~ msgid ""
-#~ "However, since the default shell is required to be POSIX-compliant, any "
-#~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
-#~ "wish to do this because dash is faster and smaller than bash."
-#~ msgstr ""
-#~ "Tuy nhiên, vì trình bao mặc định phải tuân theo POSIX, bất cứ trình bào "
-#~ "nào làm cho phù hợp với POSIX, v.d. dash, có khả năng làm « /bin/sh ». Có "
-#~ "ích vì dash nhỏ hơn và chạy nhanh hơn bash."
+msgstr "Dùng dash làm trình bao hệ thống thì tăng cường hiệu suất toàn cục của hệ thống. Nó không sửa đổi trình bao được hiển thị cho người dùng tương tác (v.d. bash, tcsh)."
