--- a/debian/changelog
+++ b/debian/changelog
@@ -29,8 +29,10 @@ dash (0.5.5.1-4) unstable; urgency=low
   * debian/control: Standards-Version: 3.8.4.0.
   * debian/po/vi.po: [INTL:vi] Vietnamese debconf templates translation
     update (thx Clytie Siddall; closes: #577156).
+  * debian/po/eu.po: [l10n:eu] dash 0.5.5.1-3.1: updated Basque
+    translation (thx dooteo; closes: #577506).
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 10 May 2010 23:02:35 +0000
+ -- Gerrit Pape <pape@smarden.org>  Mon, 10 May 2010 23:04:57 +0000
 
 dash (0.5.5.1-3) unstable; urgency=low
 
