--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -1,15 +1,16 @@
+# translation of dash_0.5.5.1-3._eu.po to Basque
 # translation of dash debconf template to Basque
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Xabier Bilbao <xabidu@gmail.com>, 2008.
-# Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2008.
+# Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2008, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: dash-eu\n"
+"Project-Id-Version: dash_0.5.5.1-3._eu\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-06-24 16:57+0200\n"
+"PO-Revision-Date: 2010-04-12 12:28+0200\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
 "Language-Team: Basque <itzulpena@euskalgnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -22,13 +23,13 @@ msgstr ""
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Erabili dash sistemako shell lehenetsi gisa (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "Sistemako shell-a komandoen interpretatzaile lehenetsia da shell-eko script-entzako."
 
 #. Type: boolean
 #. Description
@@ -37,6 +38,9 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
+"Dash erabiltzean (sistemako shell lehenetsi gisa) sistemako errendimendu "
+"orokorra hobetzen da. Honek ez du aldatzen erabiltzaileekin elkarreragiteko "
+"aurkezten den shell-a."
 
 #~ msgid "Install dash as /bin/sh?"
 #~ msgstr "Dash instalatu /bin/sh gisa?"
@@ -56,3 +60,4 @@ msgstr ""
 #~ "duenez, POSIX-ekin bat datorren edozein shell, hala nola dash, /bin/sh "
 #~ "gisa ezar daiteke. Aldaketa hau egitea nahi izan dezakezu, dash "
 #~ "bizkorragoa eta txikiagoa baita bash baino."
+
