--- a/debian/changelog
+++ b/debian/changelog
@@ -31,8 +31,11 @@ dash (0.5.5.1-4) unstable; urgency=low
     update (thx Clytie Siddall; closes: #577156).
   * debian/po/eu.po: [l10n:eu] dash 0.5.5.1-3.1: updated Basque
     translation (thx dooteo; closes: #577506).
+  * debian/po/pt.po: [INTL:pt] Updated Portuguese translation for
+    debconf messages (thx Traduz - Portuguese Translation Team; closes:
+    #578104).
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 10 May 2010 23:04:57 +0000
+ -- Gerrit Pape <pape@smarden.org>  Mon, 10 May 2010 23:06:13 +0000
 
 dash (0.5.5.1-3) unstable; urgency=low
 
