--- a/debian/po/pt.po
+++ b/debian/po/pt.po
@@ -1,15 +1,16 @@
 # Portuguese translation of dash's debconf messages.
-# Copyright (C) 2007 
+# Copyright (C) 2007 the package copyright holder
 # This file is distributed under the same license as the dash package.
 # Ricardo Silva <ardoric@gmail.com>, 2007.
+# Miguel Figueiredo <elmig@debianpt.org>, 2010.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dash 0.5.4-9\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-07-06 23:37+0100\n"
-"Last-Translator: Ricardo Silva <ardoric@gmail.com>\n"
+"PO-Revision-Date: 2010-04-16 22:37+0100\n"
+"Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,13 +20,13 @@ msgstr ""
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Utilizar o dash como shell predefinida do sistema (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "A shell do sistema é o interpretador de comandos predefinido para scripts da shell."
 
 #. Type: boolean
 #. Description
@@ -34,6 +35,8 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
+"Utilizar o dash como shell do sistema irá melhorar a performance em geral do "
+"sistema. Não altera a shell apresentada aos utilizadores interactivos."
 
 #~ msgid "Install dash as /bin/sh?"
 #~ msgstr "Instalar dash como /bin/sh?"
