--- a/debian/changelog
+++ b/debian/changelog
@@ -34,8 +34,10 @@ dash (0.5.5.1-4) unstable; urgency=low
   * debian/po/pt.po: [INTL:pt] Updated Portuguese translation for
     debconf messages (thx Traduz - Portuguese Translation Team; closes:
     #578104).
+  * debian/diff/0028-EVAL-Fix-command-crash.diff: new; Fix command --
+    crash (closes: #579543).
 
- -- Gerrit Pape <pape@smarden.org>  Mon, 10 May 2010 23:06:13 +0000
+ -- Gerrit Pape <pape@smarden.org>  Mon, 10 May 2010 23:11:01 +0000
 
 dash (0.5.5.1-3) unstable; urgency=low
 
