--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -2,32 +2,34 @@
 # Copyright (C) 2008 THE dash'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the dash package.
 # André Luís Lopes <andrelop@debian.org>, 2008.
-# Adriano Rafael Gomes <adrianorg@gmail.com>, 2008.
+# Adriano Rafael Gomes <adrianorg@gmail.com>, 2008-2010.
 #
 msgid ""
-msgstr ""
-"Project-Id-Version: dash 0.5.4-9.1\n"
+msgstr "pt_BR utf-8\n"
+"Project-Id-Version: dash 0.5.5.1-3\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-06-28 01:36-0300\n"
+"PO-Revision-Date: 2010-05-16 22:18-0300\n"
 "Last-Translator: Adriano Rafael Gomes <adrianorg@gmail.com>\n"
-"Language-Team: l10n Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
+"Language-Team: Brazilian Portuguese <debian-l10n-portuguese@lists.debian."
+"org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"pt_BR utf-8\n"
+
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Usar o dash como shell padrão do sistema (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
 msgstr ""
+"O shell do sistema é o interpretador de comandos padrão para shell scripts."
 
 #. Type: boolean
 #. Description
@@ -36,6 +38,8 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
+"Usar o dash como shell do sistema irá melhorar o desempenho geral do "
+"sistema. Isso não altera o shell apresentado para usuários interativos."
 
 #~ msgid "Install dash as /bin/sh?"
 #~ msgstr "Instalar o dash como /bin/sh?"
