--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -1,31 +1,33 @@
-# translation of dash_0.4.21_templates.po to Danish
-#
+# Danish translation Dash.
+# Copyright (C) 2010 Dash & nedenstående oversættere.
+# This file is distributed under the same license as the Dash package.
 # Claus Hindsgaul <claus_h@image.dk>, 2004.
 # Claus Hindsgaul <claus.hindsgaul@gmail.com>, 2006.
+# Joe Hansen <joedalton2@yahoo.dk>, 2010.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: dash_0.4.21_templates\n"
+"Project-Id-Version: dash\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2006-11-15 15:01+0100\n"
-"Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
-"Language-Team: Danish\n"
+"PO-Revision-Date: 2010-06-03 17:30+01:00\n"
+"Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
+"Language-Team: Danish <debian-l10n-danish@lists.debian.org> \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Brug dash som standardsystemskal (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "Systemskallen er standardkommandofortolkeren til skalskript."
 
 #. Type: boolean
 #. Description
@@ -34,25 +36,8 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
+"Brug af dash som systemskal vil forbedre systemets generelle "
+"ydeevne. Den ændrer ikke på skallen vist til interaktive brugere."
 
-#~ msgid "Install dash as /bin/sh?"
-#~ msgstr "Installér dash som /bin/sh?"
 
-#, fuzzy
-#~| msgid ""
-#~| "Bash is the default /bin/sh on a Debian system.  However, since the "
-#~| "Debian policy requires all shell scripts using /bin/sh to be POSIX "
-#~| "compliant, any shell that conforms to POSIX can serve as /bin/sh.  Since "
-#~| "dash is POSIX compliant, it can be used as /bin/sh.  You may wish to do "
-#~| "this because dash is faster and smaller than bash."
-#~ msgid ""
-#~ "However, since the default shell is required to be POSIX-compliant, any "
-#~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
-#~ "wish to do this because dash is faster and smaller than bash."
-#~ msgstr ""
-#~ "Bash er som udgangspunkt /bin/sh på et Debiansystem. Men da det er "
-#~ "Debians politik, at skalskripter, der benytter /bin/sh skal overholde "
-#~ "POSIX-standarden, vil enhver skal, der overholder POSIX kunne fungere "
-#~ "som /bin/sh. Siden dash er overholder POSIX, kan den benyttes som /bin/"
-#~ "sh. Det kan være en fordel at gøre dette, fordi dash er hurtigere og "
-#~ "mindre end bash."
+
