Import Debian changes 0.5.5.1-7.1
dash (0.5.5.1-7.1) unstable; urgency=low

  * Non-maintainer upload with maintainer approval.
  * Add "debconf | debconf-2.0" to dependencies as this package is
    using debconf
  * Explicitly re-include the text of the BSD licence as
    /usr/share/common-licenses/BSD could be dropped in the future
    because of minor wording changes in the different version of
    the BSD licence text
  * Fix pending l10n issues. Debconf translations:
    - Czech (Miroslav Kure).  Closes: #598331
    - Finnish (Esko Arajärvi).  Closes: #600518

--- a/debian/po/da.po
+++ b/debian/po/da.po
@@ -13,6 +13,7 @@ msgstr ""
 "PO-Revision-Date: 2010-06-03 17:30+01:00\n"
 "Last-Translator: Joe Hansen <joedalton2@yahoo.dk>\n"
 "Language-Team: Danish <debian-l10n-danish@lists.debian.org> \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,8 +37,5 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
-"Brug af dash som systemskal vil forbedre systemets generelle "
-"ydeevne. Den ændrer ikke på skallen vist til interaktive brugere."
-
-
-
+"Brug af dash som systemskal vil forbedre systemets generelle ydeevne. Den "
+"ændrer ikke på skallen vist til interaktive brugere."
