--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+dash (0.5.5.1-7.1) unstable; urgency=low
+
+  * Non-maintainer upload with maintainer approval.
+  * Add "debconf | debconf-2.0" to dependencies as this package is
+    using debconf
+  * Explicitly re-include the text of the BSD licence as
+    /usr/share/common-licenses/BSD could be dropped in the future
+    because of minor wording changes in the different version of
+    the BSD licence text
+  * Fix pending l10n issues. Debconf translations:
+    - Czech (Miroslav Kure).  Closes: #598331
+    - Finnish (Esko Arajärvi).  Closes: #600518
+
+ -- Christian Perrier <bubulle@debian.org>  Mon, 18 Oct 2010 09:39:14 +0200
+
 dash (0.5.5.1-7) unstable; urgency=low
 
   [ Raphael Geissert ]
