--- a/debian/po/bg.po
+++ b/debian/po/bg.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-12-28 15:02+0200\n"
 "Last-Translator: Damyan Ivanov <dmn@debian.org>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
+"Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -26,7 +27,8 @@ msgstr "Използване на dash като системна обвивка 
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr "Системната обвивка се използва по подразбиране от скриптовете на обвивката."
+msgstr ""
+"Системната обвивка се използва по подразбиране от скриптовете на обвивката."
 
 #. Type: boolean
 #. Description
@@ -35,8 +37,8 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
-"Използването на dash като системна обвивка ще подобри бързодействието "
-"на системата като цяло. Тази настройка не променя обвивката на интерактивните "
+"Използването на dash като системна обвивка ще подобри бързодействието на "
+"системата като цяло. Тази настройка не променя обвивката на интерактивните "
 "потребители."
 
 #~ msgid "Install dash as /bin/sh?"
@@ -55,4 +57,3 @@ msgstr ""
 #~ "съвместима с POSIX, всяко обвивка, която отговаря на това условие, като "
 #~ "например dash, може да изпълнява тази роля. Възможна причина да "
 #~ "предпочетете dash пред bash е, че е по-малка и по-бърза."
-
