--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -5,9 +5,10 @@ msgstr ""
 "Project-Id-Version: dash\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-06-18 08:24+0200\n"
+"PO-Revision-Date: 2010-04-21 20:18+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,13 +17,13 @@ msgstr ""
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Použít dash jako výchozí systémový shell (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "Systémový shell je výchozí příkazový interpret shellových skriptů."
 
 #. Type: boolean
 #. Description
@@ -31,6 +32,8 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
+"Použití dash jako systémového shellu celkově zlepší výkon systému. Toto "
+"nastavení nijak neovlivní interaktivní shell jednotlivých uživatelů."
 
 #~ msgid "Install dash as /bin/sh?"
 #~ msgstr "Nainstalovat dash jako /bin/sh?"
