--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -35,6 +35,7 @@ msgstr ""
 "PO-Revision-Date: 2009-08-02 17:21+0100\n"
 "Last-Translator: Francisco Javier Cuadrado <fcocuadrado@gmail.com>\n"
 "Language-Team: Debian l10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -43,27 +44,38 @@ msgstr ""
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr "¿Desea utilizar dash como el intérprete de órdenes predeterminado del sistema (/bin/sh)?"
+msgstr ""
+"¿Desea utilizar dash como el intérprete de órdenes predeterminado del "
+"sistema (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr "El intérprete de órdenes del sistema es el que se utiliza de forma predeterminada para todos los programas y scripts."
+msgstr ""
+"El intérprete de órdenes del sistema es el que se utiliza de forma "
+"predeterminada para todos los programas y scripts."
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
-msgid "Using dash as the system shell will improve the system's overall performance. It does not alter the shell presented to interactive users."
-msgstr "El uso de dash como el intérprete de órdenes del sistema mejorará el rendimiento general de éste. Esto no altera el intérprete de órdenes que utilizan los usuarios interactivos."
+msgid ""
+"Using dash as the system shell will improve the system's overall "
+"performance. It does not alter the shell presented to interactive users."
+msgstr ""
+"El uso de dash como el intérprete de órdenes del sistema mejorará el "
+"rendimiento general de éste. Esto no altera el intérprete de órdenes que "
+"utilizan los usuarios interactivos."
 
 #~ msgid "Install dash as /bin/sh?"
 #~ msgstr "¿Desea instalar dash como «/bin/sh»?"
+
 #~ msgid ""
 #~ "The default /bin/sh shell on Debian and Debian-based systems is bash."
 #~ msgstr ""
 #~ "Bash es el intérprete de órdenes «/bin/sh» predeterminado de los sistemas "
 #~ "Debian y basados en Debian."
+
 #~ msgid ""
 #~ "However, since the default shell is required to be POSIX-compliant, any "
 #~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
@@ -73,4 +85,3 @@ msgstr "El uso de dash como el intérprete de órdenes del sistema mejorará el 
 #~ "normas POSIX, cualquier intérprete compatible con POSIX, como dash, puede "
 #~ "servir como «/bin/sh». Puede que lo prefiera porque dash es más rápido y "
 #~ "más pequeño que bash."
-
