--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -1,28 +1,32 @@
+# Esko Arajärvi <edu@iki.fi>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: dash 0.5.4-8\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
-"PO-Revision-Date: 2008-03-05 13:25+0200\n"
+"PO-Revision-Date: 2010-10-17 21:53+0300\n"
 "Last-Translator: Esko Arajärvi <edu@iki.fi>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
+"Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Finnish\n"
 "X-Poedit-Country: FINLAND\n"
+"X-Generator: Lokalize 1.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr ""
+msgstr "Käytetäänkö dashia järjestelmän oletuskomentotulkkina (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
-msgstr ""
+msgstr "Komentosarjat ajetaan oletuksena järjestelmän komentotulkilla."
 
 #. Type: boolean
 #. Description
@@ -31,22 +35,6 @@ msgid ""
 "Using dash as the system shell will improve the system's overall "
 "performance. It does not alter the shell presented to interactive users."
 msgstr ""
-
-#~ msgid "Install dash as /bin/sh?"
-#~ msgstr "Asennetaanko dash linkitettynä tiedostoon /bin/sh?"
-
-#~ msgid ""
-#~ "The default /bin/sh shell on Debian and Debian-based systems is bash."
-#~ msgstr ""
-#~ "Debianissa ja Debianiin pohjautuvissa järjestelmissä "
-#~ "oletuskomentotulkkina /bin/sh toimii bash."
-
-#~ msgid ""
-#~ "However, since the default shell is required to be POSIX-compliant, any "
-#~ "shell that conforms to POSIX, such as dash, can serve as /bin/sh. You may "
-#~ "wish to do this because dash is faster and smaller than bash."
-#~ msgstr ""
-#~ "Koska oletuskomentotulkin tulee olla POSIX-yhteensopiva, mikä tahansa "
-#~ "POSIXin vaatimukset täyttävä komentotulkki, esimerkiksi dash, voi toimia /"
-#~ "bin/sh:na. Saatat haluta käyttää dashia, koska se on nopeampi ja pienempi "
-#~ "kuin bash."
+"Järjestelmän suorituskykyä voidaan parantaa käyttämällä dashia järjestelmän "
+"oletuskomentotulkkina. Tämä ei vaikuta käyttäjille näytettäviin "
+"komentotulkkeihin."
