--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -13,6 +13,7 @@ msgstr ""
 "PO-Revision-Date: 2009-08-02 13:30+0100\n"
 "Last-Translator: Julien Patriarca <patriarcaj@gmail.com>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
