--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -19,6 +19,7 @@ msgstr ""
 "PO-Revision-Date: 2008-07-21 10:50+0200\n"
 "Last-Translator: Thijs Kinkhorst <thijs@debian.org>\n"
 "Language-Team: Debian Dutch <debian-l10n-dutch@lists.debian.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
