--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -5,7 +5,7 @@
 # Adriano Rafael Gomes <adrianorg@gmail.com>, 2008-2010.
 #
 msgid ""
-msgstr "pt_BR utf-8\n"
+msgstr ""
 "Project-Id-Version: dash 0.5.5.1-3\n"
 "Report-Msgid-Bugs-To: dash@packages.debian.org\n"
 "POT-Creation-Date: 2009-07-27 12:43+0000\n"
@@ -13,10 +13,11 @@ msgstr "pt_BR utf-8\n"
 "Last-Translator: Adriano Rafael Gomes <adrianorg@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <debian-l10n-portuguese@lists.debian."
 "org>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
+"pt_BR utf-8\n"
 
 #. Type: boolean
 #. Description
