--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -21,25 +21,28 @@ msgstr ""
 "PO-Revision-Date: 2009-07-29 21:06+0400\n"
 "Last-Translator: Yuri Kozlov <yuray@komyakino.ru>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "Use dash as the default system shell (/bin/sh)?"
-msgstr "Использовать dash в качестве системной оболочки по умолчанию (/bin/sh)?"
+msgstr ""
+"Использовать dash в качестве системной оболочки по умолчанию (/bin/sh)?"
 
 #. Type: boolean
 #. Description
 #: ../dash.templates.in:1001
 msgid "The system shell is the default command interpreter for shell scripts."
 msgstr ""
-"Системная оболочка -- это командный интерпретатор для "
-"сценариев оболочки командной строки."
+"Системная оболочка -- это командный интерпретатор для сценариев оболочки "
+"командной строки."
 
 #. Type: boolean
 #. Description
@@ -51,4 +54,3 @@ msgstr ""
 "Использование dash в качестве системной оболочки улучшит общую "
 "производительность системы. Это не изменит оболочки командной строки, "
 "используемые пользователями."
-
