--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2009-07-28 22:49+0100\n"
 "Last-Translator: Martin Bagge <brother@bsnet.se>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
